commit antes del deploy

--- a/app/test_app.appfilterdestino/webapp/test/flpSandbox.html
+++ b/app/test_app.appfilterdestino/webapp/test/flpSandbox.html
@@ -44,10 +44,10 @@
                 }
             },
             applications: {
-                "testappappfilter-tile": {
-                    title: "AppFilter",
+                "testappappfilterdestino-tile": {
+                    title: "AppFilterDestino",
                     description: "My SAP application",
-                    additionalInformation: "SAPUI5.Component=testapp.appfilter",
+                    additionalInformation: "SAPUI5.Component=testapp.appfilterdestino",
                     applicationType: "URL",
                     url: "../"
                 }
@@ -65,7 +65,7 @@
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-compatVersion="edge"
         data-sap-ui-language="en"
-        data-sap-ui-resourceroots='{"testapp.appfilter": "../"}'
+        data-sap-ui-resourceroots='{"testapp.appfilterdestino": "../"}'
         data-sap-ui-frameOptions="allow"
         data-sap-ui-flexibilityServices='[{"connector": "LocalStorageConnector"}]'>
     </script>
